Fixing typo in english translation

--- a/src/main/resources/Languages/en.yml
+++ b/src/main/resources/Languages/en.yml
@@ -3,7 +3,7 @@ allowed_commands_presentation: "Below are all the available commands for you."
 api_user_created: "The user has been successfully created."
 api_user_deleted: "&a&lSuccess: &aThe user has been successfully deleted."
 api_user_exist: "&c&lError: &cThe user already exist!"
-api_user_not_found: "&c&lErreur: &cThe user could not be found."
+api_user_not_found: "&c&lError: &cThe user could not be found."
 checking_dtb_problems: "Checking the database for previous installation and fixing problems..."
 command_api_createuser: "&b/stackit createuser <username> <password> &l|&r &3Create a user for the API"
 command_api_deleteuser: "&b/stackit deleteuser <utilisateur> &l|&r &3Delete a user from the l'API"
